[package]
name = "simple_vpn"
version = "0.1.0"
authors = ["Sirius <sirius@x250>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
anyhow = "1.0"
async-trait = { version = "0.1" }
# tun = { path = "../../../meh/rust-tun" }
tun = "0.5"
smol = "0.3"
# blocking = { path = "../../../stjepang/blocking" }
clap = "3.0.0-beta.1"
# futures-lite = "0.1"
futures-util = { version = "0.3", features = ["std", "io"] }
async-tungstenite = { version = "0.8" }
