[package]
name = "simple_vpn"
version = "0.1.0"
authors = ["Sirius <sirius@x250>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.7"
tun = "0.5"
anyhow = "1.0"
clap = "3.0.0-beta.1"
tungstenite = { version = "0.11", default-features = false }
native-tls = "0.2"
